probando otro fondo - tratando de subir un grafico

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
    
     
-    <p>CDN para graficos < script src="https://cdn.jsdelivr.net/npm/chart.js" ></script></p>
+    <!-- <p>CDN para graficos <script src="https://cdn.jsdelivr.net/npm/chart.js"></script></p> -->
     
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- <script src="assets/js/mindicador.json"></script> -->
