Fix: Convertidor de monedas

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="contenedor">
         <h1>Conversor de Monedas Nacional</h1>
         <div id="div-monedas">
-            <h2>Pesos CLP:</h2>
+            <h2>Pesos CLP: </h2>
             <input type="number" name="monedas" id=inputMonedas value="" min=0 style="text-align:center">
             <p style="padding-top:0.5em">Selecciona un tipo de moneda: </p>
             <select id="selectMonedas">
@@ -22,7 +22,7 @@
             <div id=divBoton style="padding-top:1em">
                 <button type="button" id="conversor"> Convertir </button>
             </div>
-            <p style="padding-top:1em">El resultado es: $<span id="resultado">resultado</span> pesos</p>
+           <span style="padding-top:1em" id="resultado">resultado </span>
         </div>
         <div id="grafico">
             <canvas id="graficoMonedas"></canvas>
